# litestar-admin

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  plan.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml  publish.yml
docs/: authentication.md  changelog.md  conf.py  configuration.md  deployment.md  getting-started.md  guards.md  index.md  model-views.md
docs/_static/: custom.css
docs/api/: authentication.md  bulk-actions.md  dashboard.md  export.md  import.md  index.md  models.md
docs/user-guide/: audit-log.md  custom-views.md  file-uploads.md  keyboard-shortcuts.md  relationships.md  storage.md  user-management.md
examples/: __init__.py
examples/asgi_raw/: README.md  __init__.py  app.py
examples/framework_bridge/: README.md  __init__.py  fastapi_integration.py  starlette_mount.py
examples/full/: README.md  __init__.py  app.py  auth.py  models.py  redis_store.py  views.py
examples/minimal/: README.md  __init__.py  app.py
frontend/: .gitignore  next.config.js  oxlint.json  package.json  tsconfig.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/actions/: page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/custom/: page.tsx
frontend/src/app/embeds/: page.tsx
frontend/src/app/export/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/models/[model]/: error.tsx  loading.tsx  page.tsx
frontend/src/app/models/[model]/[id]/: loading.tsx  not-found.tsx  page.tsx
frontend/src/app/models/[model]/new/: page.tsx
frontend/src/app/pages/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/auth/: AuthGuard.tsx  ProtectedRoute.tsx  UserMenu.tsx  index.ts
frontend/src/components/dashboard/: ActivityFeed.tsx  ModelCard.tsx  ModelOverview.tsx  QuickActions.tsx  Sparkline.tsx  StatsRow.tsx  index.ts
frontend/src/components/data/: BulkActions.tsx  ColumnVisibility.tsx  DataTable.tsx  ExportDialog.tsx  RecordForm.tsx  SearchFilter.tsx  index.ts
frontend/src/components/data/csv-import/: CSVDropzone.tsx  CSVImportButton.tsx  CSVImportWizard.tsx  ColumnMapper.tsx  ImportPreview.tsx  index.ts  types.ts
frontend/src/components/forms/: Fieldset.tsx  FileUpload.tsx  ImagePreview.tsx  MultiRelationshipPicker.tsx  RelationshipPicker.tsx  RichTextEditor.tsx  index.ts
frontend/src/components/layout/: Breadcrumb.tsx  Header.tsx  MainLayout.tsx  PageHeader.tsx  Sidebar.tsx  index.ts
frontend/src/components/pages/: ActionPage.tsx  ContentPage.tsx  CreateRecordPage.tsx  CustomViewCreatePage.tsx  CustomViewDetailPage.tsx  CustomViewListPage.tsx  EmbedPage.tsx  ModelListPage.tsx  RecordDetailPage.tsx  UserCreatePage.tsx  UserDetailPage.tsx  UserListPage.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  CommandPalette.tsx  Form.tsx  HighlightedText.tsx  KeyboardShortcutsModal.tsx  Loading.tsx  Modal.tsx  Table.tsx  Toast.tsx  index.ts
frontend/src/components/users/: PasswordChangeModal.tsx  RoleSelector.tsx  UserStatusBadge.tsx  index.ts
frontend/src/contexts/: AdminSettingsContext.tsx  AuthContext.tsx  CommandPaletteContext.tsx  LayoutContext.tsx  ThemeContext.tsx  index.ts
frontend/src/hooks/: index.ts  useApi.ts  useAuth.ts  useKeyboardShortcuts.ts  useSearchFilter.ts  useTableKeyboardNavigation.ts  useVirtualList.ts
frontend/src/lib/: api.ts  icons.tsx  utils.ts
frontend/src/types/: index.ts
src/litestar_admin/: __init__.py  config.py  discovery.py  logging.py  plugin.py  registry.py  service.py
src/litestar_admin/audit/: __init__.py  database.py  logger.py  middleware.py  models.py
src/litestar_admin/auth/: __init__.py  jwt.py  models.py  password.py  password_reset.py  protocols.py  session.py
src/litestar_admin/contrib/: __init__.py
src/litestar_admin/contrib/oauth/: __init__.py  backend.py  config.py
src/litestar_admin/contrib/providers/: __init__.py  http_api.py  in_memory.py  json_file.py
src/litestar_admin/contrib/sqladmin/: __init__.py  bridge.py
src/litestar_admin/contrib/storages/: __init__.py  backend.py  config.py  thumbnails.py  utils.py
src/litestar_admin/contrib/vite/: __init__.py
src/litestar_admin/controllers/: __init__.py  auth.py  bulk.py  config.py  custom_views.py  dashboard.py  export.py  files.py  import_data.py  models.py  oauth.py  relationships.py  settings.py  users.py
src/litestar_admin/fields/: __init__.py  file.py  rich_text.py  sanitize.py
src/litestar_admin/guards/: __init__.py  permissions.py
src/litestar_admin/middleware/: __init__.py  auth.py  ratelimit.py
src/litestar_admin/relationships/: __init__.py  detector.py  types.py
src/litestar_admin/settings/: __init__.py  models.py  service.py
src/litestar_admin/views/: __init__.py  action.py  admin_view.py  base.py  custom.py  embed.py  link.py  model.py  page.py
tests/: __init__.py  conftest.py  test_audit.py  test_auth_controller.py  test_config.py  test_custom_views.py  test_discovery.py  test_file_fields.py  test_guards.py  test_integration.py  test_jwt_auth.py  test_logging.py  test_oauth_integration.py  test_permissions_integration.py  test_plugin.py  test_ratelimit.py  test_redis_stores.py  test_registry.py  test_relationships.py  test_rich_text_sanitize.py  test_security.py  test_sqladmin_bridge.py  test_views.py
