[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.11,<0.10.0"]

[project]
name = "litestar-admin"
version = "0.1.0"
description = "Modern admin panel framework for Litestar with Cloudflare-inspired UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jacob Coffee", email = "jacob@z7x.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["litestar", "admin", "dashboard", "crud", "sqlalchemy", "admin-panel"]
dependencies = [
    "litestar>=2.0.0",
    "advanced-alchemy>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
jwt = [
    "pyjwt>=2.8.0",
]
oauth = [
    "litestar-oauth>=0.1.0",
]
sqladmin = [
    "sqladmin-litestar-plugin>=0.1.0",
]
redis = [
    "redis>=5.0.0",
]
structlog = [
    "structlog>=24.1.0",
]
auth = [
    "passlib[argon2]>=1.7.4",
]
storage = [
    "litestar-storages>=0.1.0",
    "pillow>=10.0.0",
]
excel = [
    "openpyxl>=3.1.0",
]
sanitize = [
    "nh3>=0.2.0",
]
all = [
    "litestar-admin[jwt,oauth,sqladmin,redis,structlog,auth,storage,excel,sanitize]",
]

[project.urls]
Homepage = "https://github.com/JacobCoffee/litestar-admin"
Documentation = "https://jacobcoffee.github.io/litestar-admin"
Repository = "https://github.com/JacobCoffee/litestar-admin"
Issues = "https://github.com/JacobCoffee/litestar-admin/issues"

[project.entry-points."litestar.plugins"]
admin = "litestar_admin:AdminPlugin"

# ==============================================================================
# Ruff Configuration
# ==============================================================================

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src/litestar_admin", "tests"]
exclude = ["frontend/", "examples/"]
fix = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "A005",     # module-shadowing-builtin (types.py is intentional)
    "ANN401",   # dynamically-typed-expressions (Any needed for generic model/pk types)
    "BLE001",   # blind-except (sometimes needed for robust error handling)
    "COM812",   # missing-trailing-comma (conflicts with formatter)
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM",       # flake8-errmsg (too strict)
    "ERA001",   # commented-out-code
    "FIX002",   # line-contains-fixme
    "ISC001",   # single-line-implicit-string-concatenation (conflicts with formatter)
    "PERF401",  # manual-list-comprehension (async comprehensions are less readable)
    "PLC0415",  # import-outside-toplevel (allow lazy imports)
    "PLR0913",  # too-many-arguments
    "RUF022",   # unsorted-all (we organize __all__ by category)
    "TC003",    # move-import-into-type-checking (breaks runtime imports)
    "TD",       # flake8-todos
    "TRY003",   # raise-vanilla-args
    "TRY300",   # try-consider-else (sometimes cleaner in try block)
]

[tool.ruff.lint.isort]
known-first-party = ["litestar_admin", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "A", "ANN", "ARG", "B", "BLE", "C901", "D", "DTZ", "EM", "ERA001",
    "FBT", "G", "N", "PGH", "PIE", "PLR", "PLW", "PT011", "PT012", "PTH",
    "RSE", "RUF012", "S", "S101", "SIM", "SLF001", "TCH", "TRY", "UP006",
]
"examples/**/*" = ["ARG", "B008", "D", "FAST", "FBT", "PLR1714", "RET504", "RUF012", "S101", "S104", "S106", "SIM108", "T201", "TC002"]
"src/litestar_admin/controllers/**/*" = ["B008"]  # Litestar Parameter defaults

[tool.ruff.lint.pydocstyle]
convention = "google"

# ==============================================================================
# ty Configuration
# ==============================================================================

[tool.ty]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
deprecated = "warn"
not-iterable = "warn"

[tool.ty.src]
exclude = [
    "docs/conf.py",
    "tests/",
    "examples/",
    "frontend/",
    "src/litestar_admin/auth/jwt.py",  # Optional PyJWT dependency
    "src/litestar_admin/contrib/",  # Optional dependency integrations
]

# ==============================================================================
# Pytest Configuration
# ==============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-p", "no:pastebin",
    "-p", "no:nose",
    "-p", "no:doctest",
    "-ra",
]
norecursedirs = [
    ".*", "build", "dist", "*.egg", "venv", ".venv", "node_modules", "_build", "docs", "frontend",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use mocked external services)",
    "e2e: End-to-end tests (full application workflow)",
    "slow: Tests that take more than 1 second",
]
minversion = "8.0"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["src/litestar_admin"]
branch = true
concurrency = ["multiprocessing", "thread"]
omit = ["*/tests/*"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
fail_under = 0

# ==============================================================================
# Dependency Groups
# ==============================================================================

[dependency-groups]
docs = [
    "sphinx>=7.0.0",
    "shibuya>=2024.8.0",
    "sphinx-autobuild>=2024.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "myst-parser>=2.0.0",
    "linkify-it-py>=2.0.0",
]
lint = [
    "ty>=0.0.1a27",
    "ruff>=0.8.0",
    "prek>=0.2.18",
    "codespell>=2.2.6",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=16.1",
    "httpx>=0.27.0",
    "polyfactory>=2.15.0",
    "aiosqlite>=0.19.0",
    "pyjwt>=2.8.0",  # Required for JWT auth tests
    "structlog>=24.1.0",  # Required for structlog logging tests
    "fakeredis[lua]>=2.26.0",  # Required for Redis store tests
]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    "pytest-sugar>=1.1.1",
]

[tool.uv]
default-groups = ["dev"]

# ==============================================================================
# git-cliff Configuration
# ==============================================================================

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.

"""
body = """
{% if version %}\
    {% if previous.version %}\
## [{{ version | trim_start_matches(pat="v") }}]($REPO/compare/{{ previous.version }}..{{ version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
    {% else %}\
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
    {% endif %}\
{% else %}\
## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}

### {{ group | striptags | trim | upper_first }}

{% for commit in commits
| filter(attribute="scope")
| sort(attribute="scope") %}
- **({{commit.scope}})**{% if commit.breaking %} [**breaking**]{% endif %} {{ commit.message | split(pat="\n") | first | trim }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }}))
{%- endfor -%}
{%- for commit in commits %}
{%- if commit.scope -%}
{% else %}
- {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | split(pat="\n") | first | trim }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }}))
{% endif -%}
{% endfor -%}
{% endfor %}
"""
footer = """
---
*litestar-admin Changelog*
"""
output = "docs/changelog.md"
postprocessors = [
  {pattern = '\$REPO', replace = "https://github.com/JacobCoffee/litestar-admin"},
]
trim = true

[tool.git-cliff.git]
commit_parsers = [
  {message = "^Initial commit", skip = true},
  {message = "^Merge", skip = true},
  {message = "^Bump the", skip = true},
  {message = "^feat", group = "Features"},
  {message = "^fix", group = "Bug Fixes"},
  {message = "^doc", group = "Documentation"},
  {message = "^perf", group = "Performance"},
  {message = "^refactor", group = "Refactoring"},
  {message = "^style", group = "Style"},
  {message = "^revert", group = "Revert"},
  {message = "^test", group = "Tests"},
  {message = "^chore\\(version\\):", skip = true},
  {message = "^chore", group = "Miscellaneous Chores"},
  {body = ".*security", group = "Security"},
]
commit_preprocessors = []
conventional_commits = false
filter_commits = false
filter_unconventional = false
ignore_tags = ""
protect_breaking_commits = false
skip_tags = ""
sort_commits = "oldest"
split_commits = false
tag_pattern = "v[0-9].*"
topo_order = false

[tool.codespell]
skip = "uv.lock,frontend/node_modules"
